Stop using the libtbx conda env updater thingy (#8)
This will now warn you about missing/outdated dependencies in the
environment, but no longer attempt to install anything.

You can run the dependency installation by running requirements.py
directly (Jenkins will use that with a '-y' option to install without
asking), or just install/update package as and when needed.

--- a/requirements.conda.txt
+++ b/requirements.conda.txt
@@ -1,6 +1,14 @@
-ispyb<5.7,>=5.6.1
-zocalo
+bitshuffle
 drmaa
+ispyb>=5.6.2,<5.7
 junit-xml
+mock>=2.0
+msgpack-python
 networkx
+procrunner>=1.0.2
+pytest
+pytest-mock
 pyzmq
+stomp-py
+workflows>=2.0
+zocalo>=0.6.0
