fast_ep: use phasing results stored procedure (#11)
Replace legacy ISPyB dbserver script with new insert_phasing_analysis_results ISPyB stored procedure.

See also:
DiamondLightSource/ispyb-api#111
DiamondLightSource/ispyb-database#42

* Add insert_phasing_analysis_results to ispybsvc
* Use new phasing ispybsvc in fast_ep wrapper
* Update requirement to ispyb-api 5.8.0
* Adds dependency on xmltodict

Fixes SCI-9472
See also SCI-9478

--- a/requirements.conda.txt
+++ b/requirements.conda.txt
@@ -1,6 +1,6 @@
 bitshuffle
 drmaa
-ispyb>=5.7.1,<5.8
+ispyb>=5.8.0,<5.9
 junit-xml
 mock>=2.0
 msgpack-python
@@ -11,4 +11,5 @@ pytest-mock
 pyzmq
 stomp.py
 workflows>=2.0
+xmltodict
 zocalo>=0.6.0
