--- a/setup.cfg
+++ b/setup.cfg
@@ -12,6 +12,7 @@ classifiers =
     License :: OSI Approved :: BSD License
     Natural Language :: English
     Programming Language :: Python :: 3
+    Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
 project-urls =
@@ -20,5 +21,5 @@ project-urls =
 
 [options]
 include_package_data = True
-python_requires = >=3.8
+python_requires = >=3.7
 zip_safe = False
