Trigger service: construct sqlalchemy engine once (#38)
* construct sqlalchemy engine and session factory once on module
  import
* create a new session that reuses this engine every time
  we need it
* use new ispyb.sqlalchemy.url()
* require ispyb>=6.0.2

--- a/requirements.conda.txt
+++ b/requirements.conda.txt
@@ -1,6 +1,6 @@
 bitshuffle
 drmaa
-ispyb>=6.0,<6.1
+ispyb>=6.0.2,<6.1
 junit-xml>=1.9
 marshmallow-sqlalchemy
 msgpack-python
@@ -10,6 +10,7 @@ procrunner>=1.0.2
 pytest
 pytest-mock
 pyyaml
+sqlalchemy>=1.4.0,<1.5
 stomp.py
 workflows>=2.0
 xmltodict
