--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,7 +11,7 @@ repos:
 
 # Automatically sort imports
 - repo: https://github.com/PyCQA/isort
-  rev: 5.9.2
+  rev: 5.9.3
   hooks:
   - id: isort
 
@@ -20,6 +20,7 @@ repos:
   rev: 3.9.2
   hooks:
   - id: flake8
+    additional_dependencies: ['flake8-comprehensions==3.5.0']
 
 # Syntax validation and some basic sanity checks
 - repo: https://github.com/pre-commit/pre-commit-hooks
