--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -32,3 +32,10 @@ repos:
   - id: check-merge-conflict
   - id: check-added-large-files
     args: ['--maxkb=200']
+
+# Type checking
+- repo: https://github.com/pre-commit/mirrors-mypy
+  rev: v0.910
+  hooks:
+  - id: mypy
+    files: 'src/.*\.py$'
