--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -39,4 +39,4 @@ repos:
   hooks:
   - id: mypy
     files: 'src/.*\.py$'
-    additional_dependencies: ['types-pytz==2021.3.2', 'types-python-dateutil==2.8.3', 'types-setuptools==57.4.4', 'types-PyYAML==6.0.1', 'types-pycurl==7.44.1', 'types-requests==2.26.1', 'types-certifi==2021.10.8.0']
+    additional_dependencies: ['types-pytz==2021.3.2', 'types-python-dateutil==2.8.3', 'types-setuptools==57.4.4', 'types-PyYAML==6.0.1', 'types-pycurl==7.44.1', 'types-requests==2.26.1', 'types-certifi==2021.10.8.0', 'types-pyOpenSSL==21.0.1']
