--- a/requirements.conda.txt
+++ b/requirements.conda.txt
@@ -10,16 +10,16 @@ pandas
 pika
 pint
 procrunner>=1.0.2
+prometheus_client
 pydantic
 pytest
 pytest-mock
 python-htcondor>=9.2.0
-pyzmq
 pyyaml
+pyzmq
+seaborn
 sqlalchemy>=1.4.0,<1.5
-stomp.py
+stomp.py>=7,<8
 workflows>=2.15
 xmltodict
 zocalo>=0.13.0
-prometheus_client
-seaborn
