--- a/setup.cfg
+++ b/setup.cfg
@@ -15,7 +15,7 @@ classifiers =
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
-project-urls =
+project_urls =
     GitHub = https://github.com/DiamondLightSource/python-dlstbx
     Bug-Tracker = https://github.com/DiamondLightSource/python-dlstbx/issues
 
